my portfolio website

--- a/css/style.css
+++ b/css/style.css
@@ -282,13 +282,13 @@ a.navbar-brand img {
 }
 #menu ul.nav li a:hover,
 #menu ul.nav li a.active {
-    color: green;
+    color:green ;
     transition: all 0.4s;
 }
 #menu .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-    color: green;
+    color:green ;
     background: transparent;
 }
 a.navbar-brand {
@@ -455,6 +455,7 @@ ul.nav li.active a:before {
     padding: 10px 0px;
     font-size: 13px;
 }
+
 /*Background-stylesheets-include-here*/
 .bg-sec {
     background: green;
@@ -550,69 +551,7 @@ ul.nav li.active a:before {
     font-weight: bold;
     text-align: left;
 }
-/*Features-stylesheets-include-here*/
-#features {
-    text-align: center;
-    padding: 2% 0%;
-}
-#features .nav-tabs {
-    display: inline-block;
-    margin-top: 20px;
-}
-.tab p {
-    text-align: justify;
-}
-#features .nav-tabs > li.active > a,
-#features .nav-tabs > li.active > a:hover,
-#features .nav-tabs > li.active > a:focus {
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.26);
-    border-bottom: 2px solid green;
-    background: #f8f8f8;
-}
-#features .nav-tabs > li > a {
-    color: #555;
-    margin-right: 0;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.26);
-    background-color: #fff;
-    border-right: 1px solid #e0e0e0;
-    border-radius: 0px;
-    border-bottom: 1px solid #ffffff;
-    width: 110px;
-    padding: 0;
-    height: 80px;
-    line-height: 80px;
-    font-size: 32px;
-}
-#features .nav-tabs > li > a i.fa {
-    font-size: 25px;
-}
-#features .nav-tabs > li.active > a i.fa {
-    color: green;
-}
-#features .nav-tabs > li > a:hover {
-    border-color: transparent;
-    border-right: 1px solid #e0e0e0;
-}
-#features p.feat-sec-1 {
-    padding-top: 10px;
-}
-#features .tab-content .feat-sec {
-    margin-top: 10px;
-}
-#features .tab-content h5 {
-    text-align: left;
-    font-weight: bolder;
-}
-#features .tab-content .line {
-    float: left;
-}
-.tab {
-    margin-top: 20px;
-}
-.tab-img {
-    position: relative;
-    top: 50px;
-}
+
 /*Portfolio-stylesheets-include-here*/
 #portfolio {
     padding: 2% 0%;
@@ -638,7 +577,7 @@ ul.nav li.active a:before {
 }
 #portfolio .portfolio-filter > li a:hover,
 #portfolio .portfolio-filter > li a.active {
-    background: green;
+    background: green ;
     color: #fff;
     -webkit-transition-duration: 0.5s;
     -moz-transition-duration: 0.5s;
@@ -748,287 +687,8 @@ ul.nav li.active a:before {
     -o-transition: none;
     transition: none;
 }
-/*Pricing-stylesheets-include-here*/
-#pricing {
-    padding: 4% 0% 0% 2%;
-    text-align: center;
-}
-#pricing ul.pricing {
-    list-style: none;
-    padding: 0;
-    margin: 70px 0 30px;
-    border: 1px solid #eee;
-    border-radius: 5px 5px 4px 4px;
-    padding: 15px;
-    text-align: center;
-}
-#pricing ul.pricing:hover {
-    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.26);
-    -webkit-transition-duration: 0.3s;
-    -moz-transition-duration: 0.3s;
-    -ms-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-}
-#pricing ul.pricing li {
-    display: block;
-    padding: 10px;
-    color: #666;
-}
-#pricing ul.pricing li.plan-header {
-    background: #f8f8f8;
-    border-radius: 4px 4px 0 0;
-    margin: -15px -15px 10px;
-    padding: 15px 15px 30px;
-    border: 0;
-}
-#pricing ul.pricing li.plan-header .price-duration {
-    position: relative;
-    margin-top: -63px;
-    top: -10px;
-    display: inline-block;
-    width: 116px;
-    height: 116px;
-    background-image: -moz-linear-gradient(90deg, green 0%, green 100%);
-    background-image: -webkit-linear-gradient(90deg, green 0%, green 100%);
-    background-image: -ms-linear-gradient(90deg, green 0%, green 100%);
-    color: #fff;
-    border-radius: 100px;
-    border: 5px solid #f6f6f6;
-}
-#pricing ul.pricing li.plan-header .price-duration {
-    display: block;
-    line-height: 1;
-}
-#pricing ul.pricing strong {
-    font-size: 14px;
-}
-#pricing ul.pricing li.plan-header .price-duration > .price {
-    font-size: 24px;
-    font-weight: 700;
-    margin-top: 35px;
-}
-#pricing ul.pricing li.plan-header .price-duration > .duration {
-    margin-top: 5px;
-}
-#pricing ul.pricing li.plan-header .plan-name {
-    margin-top: 10px;
-    font-size: 21px;
-    color: #444;
-    font-weight: bold;
-    line-height: 1;
-    text-transform: uppercase;
-}
-#pricing ul.pricing.featured {
-    background: #222534;
-    color: #fff;
-    border: 0;
-}
-#pricing ul.pricing.featured li.plan-header .plan-name {
-    color: #fff;
-}
-/*Team-stylesheets-include-here*/
-#team {
-    text-align: center;
-    padding: 2% 0%;
-}
-.team-desc {
-    padding: 15px 10px 15px 10px;
-}
-.team-main-sec:hover {
-    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.26);
-    -webkit-transition-duration: 0.3s;
-    -moz-transition-duration: 0.3s;
-    -ms-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-}
-.team-sec {
-    border: 1px solid #eee;
-}
-.team-main-sec:hover .team-sec {
-    border: 1px solid #fff;
-    -webkit-transition-duration: 0.3s;
-    -moz-transition-duration: 0.3s;
-    -ms-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-}
-.team-main-sec:hover h5 {
-    color: green;
-}
-.team-sec h5 {
-    color: #555;
-    text-transform: uppercase;
-}
-.team-social-icon {
-    margin-top: 20px;
-}
-.team-desc ul.team-social-icon li {
-    display: inline-block;
-    padding-right: 20px;
-}
-.team-desc ul.team-social-icon li a i.fa {
-    font-size: 20px;
-    color: #999;
-}
-.team-desc ul.team-social-icon li a i.fa:hover.fa-facebook-f {
-    color: #3b5998;
-}
-.team-desc ul.team-social-icon li a i.fa:hover.fa-twitter {
-    color: #55acee;
-}
-.team-desc ul.team-social-icon li a i.fa:hover.fa-pinterest-p {
-    color: #bd081c;
-}
-.team-desc ul.team-social-icon li a i.fa:hover.fa-instagram {
-    color: #3f729b;
-}
-.team-desc ul.team-social-icon li a i.fa:hover.fa-google-plus {
-    color: #dc4e41;
-}
-/*Testimonials-stylesheets-include-here*/
-#testimonials {
-    background-image: url(../images/Testimonials/01.jpg);
-    height: 450px;
-    text-align: center;
-}
-#testimonials .owl-theme .owl-controls .owl-page span {
-    background: green;
-}
-.quote {
-    position: relative;
-    top: 40px;
-}
-.quote i.fa {
-    font-size: 35px;
-    color: #ffffff;
-}
-#owl-testi {
-    position: relative;
-    top: 65px;
-}
-#owl-testi p {
-    color: #ffffff;
-    font-weight: normal;
-}
-#owl-testi h5 {
-    color: #ffffff;
-    line-height: 30px;
-    padding-top: 20px;
-}
-#owl-testi h6 {
-    color: #ffffff;
-    padding-top: 20px;
-}
-/*Fun-Facts-stylesheets-include-here*/
-#fun-facts {
-    background-color: #f8f8f8;
-    padding: 3% 0%;
-}
-#fun-facts .fun-fact {
-    border-right: 1px solid #ddd;
-}
-#fun-facts .col-md-3:last-child .fun-fact {
-    border-right: 0px solid #ddd;
-}
-#fun-facts .fun-fact i {
-    margin-right: 5px;
-    color: #666;
-}
-#fun-facts .fun-fact h6 {
-    color: #555;
-    font-weight: bolder;
-}
-/*Blog-stylesheets-include-here*/
-#blog {
-    text-align: center;
-    padding: 3% 0% 0% 2%;
-}
-.blog-info {
-    text-align: left;
-}
-.blog-info h5 {
-    font-weight: bold;
-    padding-top: 10px;
-}
-.blog-info i.fa {
-    float: left;
-    margin-right: 10px;
-    color: #777;
-}
-.blog-info h6 {
-    margin: 0;
-    color: #666;
-    float: left;
-}
-.blog-info h6:hover,
-.blog-info h5:hover {
-    color: green;
-    -webkit-transition-duration: 0.3s;
-    -moz-transition-duration: 0.3s;
-    -ms-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-}
-.data-meta {
-    background: #444;
-    font-size: 15px;
-    color: #fff;
-    text-align: center;
-    position: absolute;
-    top: 0;
-    padding: 6px 15px;
-}
-.data-meta h4 {
-    color: #ffffff;
-    margin: 0;
-    font-size: 18px;
-    font-weight: bold;
-}
-a.btn-blg {
-    color: #666;
-}
-a.btn-blg:hover {
-    color: green;
-    -webkit-transition-duration: 0.3s;
-    -moz-transition-duration: 0.3s;
-    -ms-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-}
-.blog-info p {
-    text-align: justify;
-    padding-top: 5px;
-}
-.blog-info ul.blog-icon {
-    margin: 0;
-    padding: 0;
-}
-.blog-info ul li {
-    display: inline-block;
-}
-.blog-info ul li.comment {
-    margin-left: 10px;
-}
-/*Client-stylesheets-include-here*/
-#client {
-    text-align: center;
-    position: relative;
-    padding: 70px 0px 10px 0px;
-}
-.client-logo a {
-    opacity: 0.4;
-    display: table;
-    margin: 0 auto;
-}
-.client-logo a:hover {
-    opacity: 1;
-    transition: all 0.5s;
-    -moz-transition: all 0.8s;
-    -o-transition: all 0.8s;
-    -webkit-transition: all 0.8s;
-}
+
+
 /*Contact-stylesheets-include-here*/
 #contact {
     text-align: center;
@@ -1063,7 +723,7 @@ a.btn-blg:hover {
     color: #666;
 }
 .contact-sec-1 ul li a:hover {
-    color: green;
+    color:rgb(228, 149, 208) ;
     -webkit-transition-duration: 0.3s;
     -moz-transition-duration: 0.3s;
     -ms-transition-duration: 0.3s;
